--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,74 @@
 
     <string name="app_name">IM</string>
 
+    <!--登录-->
     <string name="str_login_account">账户:</string>
     <string name="str_login_pw">密码:</string>
     <string name="str_login_forget_pw">忘记密码</string>
     <string name="str_login_tips">登录遇到问题?</string>
     <string name="str_login_reg">注册账号</string>
     <string name="str_login_login">登录</string>
+    <string name="str_login_success">登录成功</string>
+    <string name="str_login_fail">登录失败</string>
+
+    <!--注册-->
+    <string name="str_reg_reg">注册</string>
+    <string name="str_reg_phone">电话:</string>
+    <string name="str_reg_pw">密码:</string>
+    <string name="str_reg_code">验证码:</string>
+    <string name="str_reg_get_code">获取验证码</string>
+
+    <!--忘记密码-->
+    <string name="str_forget_tips">温馨提示:绑定手机才可支持修改密码</string>
+    <string name="str_forget_reset">重置</string>
+    <string name="str_forget_pw">忘记密码</string>
+
+    <!--主页-->
+    <string name="str_main_title_session">会话</string>
+    <string name="str_main_title_friend">朋友</string>
+    <string name="str_main_title_news">资讯</string>
+    <string name="str_main_title_me">我</string>
+    <string name="str_main_title_add">添加</string>
+    <string name="str_main_title_more">更多</string>
+
+    <!--我-->
+    <string name="str_me_new_friend">新朋友</string>
+    <string name="str_me_not_nickname">未设置昵称</string>
+
+    <!--编辑用户-->
+    <string name="str_user_edit_tips">编辑头像</string>
+    <string name="str_user_edit_user">编辑信息</string>
+    <string name="str_user_edit_nickname">昵称:</string>
+    <string name="str_user_edit_sex">性别:</string>
+    <string name="str_user_edit_age">年龄:</string>
+    <string name="str_user_edit_b">生日:</string>
+    <string name="str_user_edit_phone">电话:</string>
+    <string name="str_user_edit_camera">相机</string>
+    <string name="str_user_edit_ablum">相册</string>
+
+    <!--Toast-->
+    <string name="str_toast_account_null">账户不能为空</string>
+    <string name="str_toast_pw_null">密码不能为空</string>
+    <string name="str_toast_phone_null">电话不能为空</string>
+    <string name="str_toast_code_null">验证码不能为空</string>
+
+    <string name="str_toast_get_code_success">获取验证码成功</string>
+    <string name="str_toast_get_code_fail">获取验证码失败</string>
+    <string name="str_toast_reg_success">注册成功</string>
+    <string name="str_toast_reg_fail">注册失败</string>
+    <string name="str_toast_reset_success">重置成功</string>
+    <string name="str_toast_reset_fail">重置失败</string>
+    <string name="str_toast_save_success">保存成功</string>
+    <string name="str_toast_save_fail">保存失败</string>
+
+    <string name="str_toast_code_error">验证码错误</string>
+
+    <!--Common-->
+    <string name="str_common_confirm">确定</string>
+    <string name="str_common_cancel">取消</string>
+    <string name="str_common_save">保存</string>
+    <string name="str_common_boy">男</string>
+    <string name="str_common_girl">女</string>
 
 
 </resources>
