--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,8 +87,15 @@
     <string name="str_chat_more_file">文件</string>
     <string name="str_chat_more_right_text">查看</string>
 
+    <string name="str_chat_image">[图片]</string>
+    <string name="str_chat_location">[位置]</string>
+    <string name="str_chat_video">[视频]</string>
+    <string name="str_chat_voice">[语音]</string>
+    <string name="str_chat_unknow">[未定义消息]</string>
+
     <!--二维码-->
     <string name="str_qrcode_title_text">二维码名片</string>
+    <string name="str_qrcode_scan_text">扫一扫</string>
 
     <!--Toast-->
     <string name="str_toast_to_friend">你们已经是好友了!</string>
@@ -113,8 +120,20 @@
 
     <string name="str_toast_quest_friend">请求添加好友</string>
     <string name="str_toast_agree_friend">同意添加好友</string>
+    <string name="str_toast_have_msg">你有一条新消息</string>
 
     <string name="str_toast_code_error">验证码错误</string>
+
+    <!--Time-->
+    <string name="str_time_format_1">刚刚</string>
+    <string name="str_time_format_2">分钟前</string>
+    <string name="str_time_format_3">半小时前</string>
+    <string name="str_time_format_4">小时前</string>
+    <string name="str_time_format_5">天前</string>
+    <string name="str_time_format_6">半个月前</string>
+    <string name="str_time_format_7">月前</string>
+    <string name="str_time_format_8">半年前</string>
+    <string name="str_time_format_9">年前</string>
 
     <!--Common-->
     <string name="str_common_confirm">确定</string>
