--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="str_reg_no_desc">这个人很懒,什么都没有留下!</string>
 
     <!--忘记密码-->
-    <string name="str_forget_tips">温馨提示:绑定手机才可支持修改密码</string>
+    <string name="str_forget_tips">温馨提示:仅支持登陆过的账号找回</string>
     <string name="str_forget_reset">重置</string>
     <string name="str_forget_pw">忘记密码</string>
 
@@ -35,6 +35,7 @@
     <string name="str_main_title_more_link">发起群聊</string>
     <string name="str_main_title_add_friend">添加朋友</string>
     <string name="str_main_title_scan">扫一扫</string>
+    <string name="str_main_scan_you">这是你自己</string>
 
     <!--我-->
     <string name="str_me_new_friend">新朋友</string>
@@ -98,6 +99,25 @@
     <string name="str_qrcode_title_text">二维码名片</string>
     <string name="str_qrcode_scan_text">扫一扫</string>
 
+    <!--设置-->
+    <string name="str_setting_title_text">设置</string>
+    <string name="str_setting_change_pw">修改密码</string>
+    <string name="str_setting_switch_languaue">切换语言</string>
+    <string name="str_setting_new_msg">新消息通知</string>
+    <string name="str_setting_exit_app">退出登陆</string>
+
+    <!--修改密码-->
+    <string name="str_change_pw_title_text">修改密码</string>
+    <string name="str_change_pw_old">旧密码:</string>
+    <string name="str_change_pw_new">新密码:</string>
+    <string name="str_change_pw_new_to">确认新密码:</string>
+    <string name="str_change_pw_change">修改</string>
+
+    <!--语言-->
+    <string name="str_languaue_zh">简体中文</string>
+    <string name="str_languaue_tw">繁體中文</string>
+    <string name="str_languaue_en">English</string>
+
     <!--Toast-->
     <string name="str_toast_to_friend">你们已经是好友了!</string>
     <string name="str_toast_op_success">操作成功</string>
@@ -118,12 +138,14 @@
     <string name="str_toast_save_fail">保存失败</string>
     <string name="str_toast_delete_success">删除成功</string>
     <string name="str_toast_delete_fail">删除失败</string>
+    <string name="str_toast_qrcode_fail">解析失败</string>
 
     <string name="str_toast_quest_friend">请求添加好友</string>
     <string name="str_toast_agree_friend">同意添加好友</string>
     <string name="str_toast_have_msg">你有一条新消息</string>
 
     <string name="str_toast_code_error">验证码错误</string>
+    <string name="str_toast_pw_to_error">两次密码不一致</string>
 
     <!--Time-->
     <string name="str_time_format_1">刚刚</string>
@@ -153,5 +175,31 @@
     <string name="str_common_boy">男</string>
     <string name="str_common_girl">女</string>
 
+    <!--新闻标题-->
+    <string-array name="news_title">
+        <item>头条</item>
+        <item>社会</item>
+        <item>国内</item>
+        <item>国际</item>
+        <item>娱乐</item>
+        <item>体育</item>
+        <item>军事</item>
+        <item>科技</item>
+        <item>财经</item>
+        <item>时尚</item>
+    </string-array>
+
+    <string-array name="news_title_en">
+        <item>top</item>
+        <item>shehui</item>
+        <item>guonei</item>
+        <item>guoji</item>
+        <item>yule</item>
+        <item>tiyu</item>
+        <item>junshi</item>
+        <item>keji</item>
+        <item>caijing</item>
+        <item>shishang</item>
+    </string-array>
 
 </resources>
