--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,9 @@
     <string name="str_toast_qrcode_fail">解析失败</string>
     <string name="str_toest_photo_is_have">图片已存在</string>
 
+    <string name="str_toest_location_succeess">定位成功</string>
+    <string name="str_toest_location_fail">定位失败</string>
+
     <string name="str_toast_quest_friend">请求添加好友</string>
     <string name="str_toast_agree_friend">同意添加好友</string>
     <string name="str_toast_have_msg">你有一条新消息</string>
